Support Java 10